syntax = "proto3";
package grpcMiddlewareAuth;
option go_package = "proto;grpcMiddlewareAuth";



service Greeter {
  rpc SayHelloAuthenticated (HelloRequest) returns (HelloResponse) {}
}

service Login {
  rpc GetToken (GetTokenRequest) returns (GetTokenResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message GetTokenRequest {
  string user = 1;
  string password = 2;
}

message GetTokenResponse {
  string token = 1;
}
